--- a/css/components/_cursor.scss
+++ b/css/components/_cursor.scss
@@ -1,74 +1,43 @@
-// .cursor-wrap {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   bottom: 0;
-//   right: 0;
-//   overflow: hidden;
-//   z-index: 100;
-//   pointer-events: none;
-// }
-
-// #ball {
-//   width: 40px;
-//   height: 40px;
-//   background: none;
-//   background: $secondary-color;
-//   opacity: 50%;
-//   border-radius: 50%;
-//   /* absoulute才能讓js指定他的xy */
-//   position: absolute;
-//   left: 50%;
-//   top: 50%;
-//   // 讓他真的置中
-//   margin: -25px 0 0 -25px;
-//   pointer-events: none;
-//   transition: all 1s ease;
-//   transition-property: background, transform;
-//   z-index: 99;
-// }
-
-// .link-grow {
-//   // background-color: $dark-color;
-//   transform: scale(2.5);
-//   filter: hue-rotate(180deg);
-//   mix-blend-mode: difference;
-// }
-.cursor {
-  margin: -7px 0 0 -7px;
-  width: 14px;
-  height: 14px;
-  pointer-events: none;
-  background: url(../assets/cursor.svg) no-repeat;
-  background-size: cover;
-  position: absolute;
-  z-index: 999;
-}
-.--grow {
-  transform: scale(4)
-}
-.wrap {
-  position: absolute;
+.cursor-wrap {
+  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   overflow: hidden;
+  z-index: 30;
+  pointer-events: none;
 }
+
+.cursor {
+  position: absolute;
+  margin: -7px 0 0 -7px;
+  width: 14px;
+  height: 14px;
+  background: url(../assets/cursor.svg) no-repeat center;
+  z-index: 999;
+  pointer-events: none;
+}
+
+.--grow {
+  transform: scale(4)
+}
+
 .outer1 {
+  position: fixed;
   margin: -30px 0 0 -30px;
   width: 60px;
   height: 60px;
-  position: relative;
   background: url(../assets/outer.svg) center no-repeat;
+  z-index: 999;
+  pointer-events: none;
+
   animation: {
     name: spin1;
     duration: 5000ms;
     iteration-count: infinite;
     timing-function: linear;
   }
-  pointer-events: none;
-  z-index: 999;
 }
 
 .outer2 {
@@ -76,19 +45,21 @@
   height: 100%;
   position: absolute;
   background: url(../assets/outer.svg) center no-repeat;
+  pointer-events: none;
+
   animation: {
     name: spin1;
     duration: 5000ms;
     iteration-count: infinite;
     timing-function: linear;
   }
-  pointer-events: none;
 }
 
 @keyframes spin1 {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -98,7 +69,8 @@
   100% {
     transform: rotate(360deg);
   }
+
   0% {
     transform: rotate(0deg);
   }
-};
+}
