--- a/css/components/_slider.scss
+++ b/css/components/_slider.scss
@@ -1,14 +1,17 @@
 .slider-wrapper {
   position: relative;
 }
+
 .slider-img {
-  max-height: 600px;
+  // max-height: 550px;
   overflow: hidden;
 }
+
 .slider-control-wrap {
-  @include absolute( auto, 0, 0, auto );
-  transform: translate3d(calc(100% + 48px), 0, 0);
+  @include absolute(auto, 0, 0, 0);
+  transform: translate3d(calc(100% + 60px), 0, 0);
 }
+
 .arrow-wrap {
   display: flex;
   flex-flow: row nowrap;
@@ -20,17 +23,20 @@
     @include box-size(50px, 50px);
     border-radius: 50%;
     text-align: center;
+
     &.focus {
       background-color: $secondary-color;
     }
   }
 }
+
 .slider-number {
   .roboto.number {
     margin: 0px 20px 0px 0px;
     color: $secondary-color;
   }
-  &.active {
+
+  &-active {
     color: $dark-color;
   }
 }
