--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -1,94 +1,97 @@
 //RWD  ---OK
-
 .footer {
   padding: 64px 0px;
   background-color: #F9F9F9;
+}
 
-  .container-footer {
-    width: 90%;
-    margin: 0 auto;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: flex-start;
+.container-footer {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: flex-start;
 
-    a {
-      display: block;
-      padding: 8px 0;
-      color: $dark-color;
-      letter-spacing: 2px;
-    }
+  a {
+    display: block;
+    padding: 8px 0;
+    color: $dark-color;
+    letter-spacing: 2px;
+  }
+}
 
-    .brandbox {
-      display: flex;
-      flex-flow: column wrap;
-      justify-content: flex-end;
-      align-items: flex-end;
+.brandbox {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-end;
+  align-items: flex-end;
 
-      .follow-box {
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
+  h4 {
+    font-family: 'Cormorant Garamond';
+    font-size: 54px;
+    font-weight: 400;
+    line-height: 1;
+    letter-spacing: 0px;
+    margin-bottom: 20px;
+  }
+}
 
-        .ig {
-          margin-left: 40px;
-          margin-right: 15px;
-          line-height: 1;
-        }
+.follow-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 
-        .fb {
-          margin-left: 10px;
-          line-height: 1;
-        }
-      }
+  .ig {
+    margin-left: 40px;
+    margin-right: 15px;
+    line-height: 1;
+  }
 
-      h4 {
-        font-family: 'Cormorant Garamond';
-        font-size: 54px;
-        font-weight: 400;
-        line-height: 1;
-        letter-spacing: 0px;
-        margin-bottom: 20px;
-      }
-    }
+  .fb {
+    margin-left: 10px;
+    line-height: 1;
   }
 }
 
 @media screen and (max-width: 767.98px) {
   .footer {
     padding: 30px 0px;
+  }
 
-    .container-footer {
-      .sitemap {
-        display: block;
-        width: 20%;
-      }
+  .sitemap {
+    display: block;
+    width: 20%;
+  }
 
-      .info-box {
-        display: block;
-        width: 70%;
-      }
+  .info-box {
+    display: block;
+    width: 70%;
+  }
 
-      .brandbox {
-        flex-flow: column wrap !important;
-        justify-content: center !important;
-        align-content: center;
-        margin-top: 40px;
-        width: 100%;
+  .brandbox {
+    flex-flow: column wrap !important;
+    justify-content: center !important;
+    align-content: center;
+    margin-top: 40px;
+    width: 100%;
 
-        .follow-box {
-          margin-left: -20px;
-          align-self: center;
-        }
-
-        h4 {
-          font-size: 54px;
-        }
-
-        p {
-          align-self: center;
-        }
-      }
+    h4 {
+      font-size: 54px;
     }
+
+    p {
+      align-self: center;
+    }
+  }
+
+  .follow-box {
+    margin-left: -20px;
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .container-footer {
+    width: calc(100% - 40px);
   }
 }
