--- a/css/base/_reset.scss
+++ b/css/base/_reset.scss
@@ -13,7 +13,6 @@ body {
   font-family: $noto-zhs, $serif;
   line-height: 1;
   color: $primary-color;
-  cursor: none;
 }
 
 main {
@@ -35,12 +34,19 @@ a {
   font-size: 14px;
   text-decoration: none;
   color: $primary-color;
-  // cursor: none
 }
 
 img,
 video {
   max-width: 100%;
+}
+
+body,
+a,
+input,
+textarea,
+button {
+  cursor: url(../assets/cursor.svg), auto !important;
 }
 
 ::selection {
