--- a/css/components/_cursor.scss
+++ b/css/components/_cursor.scss
@@ -9,26 +9,22 @@
   pointer-events: none;
 }
 
-.cursor {
-  position: absolute;
-  margin: -7px 0 0 -7px;
-  width: 14px;
-  height: 14px;
-  background: url(../assets/cursor.svg) no-repeat center;
-  z-index: 999;
-  pointer-events: none;
-}
-
-.--grow {
-  transform: scale(4)
-}
+// .cursor {
+//   position: fixed;
+//   margin: -7px 0 0 -7px;
+//   width: 14px;
+//   height: 14px;
+//   background: url(../assets/cursor.svg) no-repeat center;
+//   z-index: 999;
+//   pointer-events: none;
+// }
 
 .outer1 {
   position: fixed;
-  margin: -30px 0 0 -30px;
-  width: 60px;
-  height: 60px;
-  background: url(../assets/outer.svg) center no-repeat;
+  margin: -14px 0 0 -14px;
+  width: 45px;
+  height: 45px;
+  background: url(../assets/outer1.svg) cover no-repeat;
   z-index: 999;
   pointer-events: none;
 
@@ -44,12 +40,12 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background: url(../assets/outer.svg) center no-repeat;
+  background: url(../assets/outer2.svg) center no-repeat;
   pointer-events: none;
 
   animation: {
     name: spin1;
-    duration: 5000ms;
+    duration: 6000ms;
     iteration-count: infinite;
     timing-function: linear;
   }
