--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,6 @@ body {
   font-family: "Noto Serif JP", serif;
   line-height: 1;
   color: #6C4D41;
-  cursor: none;
 }
 
 main {
@@ -153,6 +152,14 @@ a {
 img,
 video {
   max-width: 100%;
+}
+
+body,
+a,
+input,
+textarea,
+button {
+  cursor: url(../assets/cursor.svg), auto !important;
 }
 
 ::-moz-selection {
@@ -488,27 +495,12 @@ video {
   pointer-events: none;
 }
 
-.cursor {
-  position: absolute;
-  margin: -7px 0 0 -7px;
-  width: 14px;
-  height: 14px;
-  background: url(../assets/cursor.svg) no-repeat center;
-  z-index: 999;
-  pointer-events: none;
-}
-
-.--grow {
-  -webkit-transform: scale(4);
-          transform: scale(4);
-}
-
 .outer1 {
-  position: relative;
-  margin: -30px 0 0 -30px;
-  width: 60px;
-  height: 60px;
-  background: url(../assets/outer.svg) center no-repeat;
+  position: fixed;
+  margin: -14px 0 0 -14px;
+  width: 45px;
+  height: 45px;
+  background: url(../assets/outer1.svg) cover no-repeat;
   z-index: 999;
   pointer-events: none;
   -webkit-animation-name: spin1;
@@ -525,12 +517,12 @@ video {
   width: 100%;
   height: 100%;
   position: absolute;
-  background: url(../assets/outer.svg) center no-repeat;
+  background: url(../assets/outer2.svg) center no-repeat;
   pointer-events: none;
   -webkit-animation-name: spin1;
           animation-name: spin1;
-  -webkit-animation-duration: 5000ms;
-          animation-duration: 5000ms;
+  -webkit-animation-duration: 6000ms;
+          animation-duration: 6000ms;
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
