--- a/css/components/_cursor.scss
+++ b/css/components/_cursor.scss
@@ -4,69 +4,61 @@
   left: 0;
   bottom: 0;
   right: 0;
-  overflow: hidden;
   z-index: 30;
+  overflow: hidden;
+  pointer-events: none;
+  /* 寫在容器才會影響下面的 */
+  mix-blend-mode: difference;
+}
+
+.cursor {
+  width: 10px;
+  height: 10px;
+  background-color: #6C4D41;
+  // background: #7492A7;
+  border-radius: 50%;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1000;
   pointer-events: none;
 }
 
-// .cursor {
-//   position: fixed;
-//   margin: -7px 0 0 -7px;
-//   width: 14px;
-//   height: 14px;
-//   background: url(../assets/cursor.svg) no-repeat center;
-//   z-index: 999;
-//   pointer-events: none;
-// }
-
-.outer1 {
-  position: fixed;
-  margin: -14px 0 0 -14px;
+.ball {
   width: 45px;
   height: 45px;
-  background: url(../assets/outer1.svg) cover no-repeat;
+  border-radius: 50px;
+  background-color: #6C4D41;
+  // background-color: #7492A7;
+  position: absolute;
+  left: 50%;
+  top: 50%;
   z-index: 999;
   pointer-events: none;
-
-  animation: {
-    name: spin1;
-    duration: 5000ms;
-    iteration-count: infinite;
-    timing-function: linear;
-  }
+  transform: translate(-50%, -50%);
+  transform-origin: 80% 80%;
+  opacity: 0.3;
+  transition: transform .02s ease-in-out;
+  animation: borderAnim 4s linear infinite;
 }
 
-.outer2 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: url(../assets/outer2.svg) center no-repeat;
-  pointer-events: none;
+@keyframes borderAnim {
 
-  animation: {
-    name: spin1;
-    duration: 6000ms;
-    iteration-count: infinite;
-    timing-function: linear;
-  }
-}
-
-@keyframes spin1 {
-  0% {
-    transform: rotate(0deg);
-  }
-
+  0%,
   100% {
-    transform: rotate(360deg);
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  }
+
+  25%,
+  75% {
+    border-radius: 64% 36% 72% 28% / 35% 60% 40% 65%;
+  }
+
+  50% {
+    border-radius: 46% 54% 38% 62% / 66% 38% 62% 34%;
   }
 }
 
-@keyframes spin2 {
-  100% {
-    transform: rotate(360deg);
-  }
-
-  0% {
-    transform: rotate(0deg);
-  }
+.-small {
+  transform: translate(-50%, -50%) scale(0.9);
 }
