--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .noto {
   font-size: 16px;
   font-family: "Noto Sans JP";
@@ -126,6 +127,8 @@ body {
   font-family: "Noto Serif JP", serif;
   line-height: 1;
   color: #6C4D41;
+  background-color: #fff;
+  cursor: none;
 }
 
 main {
@@ -147,19 +150,12 @@ a {
   font-size: 14px;
   text-decoration: none;
   color: #6C4D41;
+  cursor: none;
 }
 
 img,
 video {
   max-width: 100%;
-}
-
-body,
-a,
-input,
-textarea,
-button {
-  cursor: url(../assets/cursor.svg), auto !important;
 }
 
 ::-moz-selection {
@@ -490,87 +486,79 @@ button {
   left: 0;
   bottom: 0;
   right: 0;
-  overflow: hidden;
   z-index: 30;
+  overflow: hidden;
+  pointer-events: none;
+  /* 寫在容器才會影響下面的 */
+  mix-blend-mode: difference;
+}
+
+.cursor {
+  width: 10px;
+  height: 10px;
+  background-color: #6C4D41;
+  border-radius: 50%;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1000;
   pointer-events: none;
 }
 
-.outer1 {
-  position: fixed;
-  margin: -14px 0 0 -14px;
+.ball {
   width: 45px;
   height: 45px;
-  background: url(../assets/outer1.svg) cover no-repeat;
+  border-radius: 50px;
+  background-color: #6C4D41;
+  position: absolute;
+  left: 50%;
+  top: 50%;
   z-index: 999;
   pointer-events: none;
-  -webkit-animation-name: spin1;
-          animation-name: spin1;
-  -webkit-animation-duration: 5000ms;
-          animation-duration: 5000ms;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transform-origin: 80% 80%;
+          transform-origin: 80% 80%;
+  opacity: 0.3;
+  -webkit-transition: -webkit-transform .02s ease-in-out;
+  transition: -webkit-transform .02s ease-in-out;
+  transition: transform .02s ease-in-out;
+  transition: transform .02s ease-in-out, -webkit-transform .02s ease-in-out;
+  -webkit-animation: borderAnim 4s linear infinite;
+          animation: borderAnim 4s linear infinite;
 }
 
-.outer2 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: url(../assets/outer2.svg) center no-repeat;
-  pointer-events: none;
-  -webkit-animation-name: spin1;
-          animation-name: spin1;
-  -webkit-animation-duration: 6000ms;
-          animation-duration: 6000ms;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
-}
-
-@-webkit-keyframes spin1 {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
+@-webkit-keyframes borderAnim {
+  0%,
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  }
+  25%,
+  75% {
+    border-radius: 64% 36% 72% 28% / 35% 60% 40% 65%;
+  }
+  50% {
+    border-radius: 46% 54% 38% 62% / 66% 38% 62% 34%;
   }
 }
 
-@keyframes spin1 {
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
+@keyframes borderAnim {
+  0%,
   100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+  }
+  25%,
+  75% {
+    border-radius: 64% 36% 72% 28% / 35% 60% 40% 65%;
+  }
+  50% {
+    border-radius: 46% 54% 38% 62% / 66% 38% 62% 34%;
   }
 }
 
-@-webkit-keyframes spin2 {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-}
-
-@keyframes spin2 {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-  0% {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
+.-small {
+  -webkit-transform: translate(-50%, -50%) scale(0.9);
+          transform: translate(-50%, -50%) scale(0.9);
 }
 
 .slider-wrapper {
@@ -1934,7 +1922,7 @@ input[type=number]::-webkit-outer-spin-button {
   }
 }
 
-.contact-section .contact-wrap {
+.contact-wrap {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1947,15 +1935,15 @@ input[type=number]::-webkit-outer-spin-button {
           justify-content: flex-start;
 }
 
-.contact-section .contact-wrap .contact-r {
+.contact-r {
   width: 50%;
 }
 
-.contact-section .contact-wrap .contact-r .contact-txt {
+.contact-r .contact-txt {
   margin: 32px 32px;
 }
 
-.contact-section .contact-wrap .contact-r .form {
+.form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1968,7 +1956,7 @@ input[type=number]::-webkit-outer-spin-button {
           justify-content: flex-end;
 }
 
-.contact-section .contact-wrap .contact-r .form .form-row {
+.form .form-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1984,7 +1972,7 @@ input[type=number]::-webkit-outer-spin-button {
           align-items: flex-start;
 }
 
-.contact-section .contact-wrap .contact-r .form .form-row .form-column {
+.form .form-row .form-column {
   padding: 24px 32px;
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
@@ -2011,7 +1999,7 @@ input[type=number]::-webkit-outer-spin-button {
   outline: none;
 }
 
-.input:focus + .input-label {
+.transform_y {
   -webkit-transform: translateY(-30px);
           transform: translateY(-30px);
   opacity: 70%;
