--- a/css/pages/_contact.scss
+++ b/css/pages/_contact.scss
@@ -1,35 +1,33 @@
-.contact-section {
-  .contact-wrap {
+.contact-wrap {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+}
+
+.contact-r {
+  width: 50%;
+
+  .contact-txt {
+    margin: 32px 32px;
+  }
+}
+
+.form {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: flex-end;
+
+  .form-row {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: flex-start;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: flex-start;
 
-    .contact-r {
-      width: 50%;
-
-      .contact-txt {
-        margin: 32px 32px;
-      }
-
-      .form {
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: flex-end;
-
-        .form-row {
-          display: flex;
-          flex-flow: row nowrap;
-          justify-content: space-between;
-          align-items: flex-start;
-
-          .form-column {
-            padding: 24px 32px;
-            flex-basis: 50%;
-            flex-grow: 1;
-            flex-shrink: 1;
-          }
-        }
-      }
+    .form-column {
+      padding: 24px 32px;
+      flex-basis: 50%;
+      flex-grow: 1;
+      flex-shrink: 1;
     }
   }
 }
@@ -50,12 +48,18 @@
   &:focus {
     outline: none;
 
-    &+.input-label {
-      transform: translateY(-30px);
-      opacity: 70%;
-      font-size: 14px;
-    }
+    // &+.input-label {
+    //   transform: translateY(-30px);
+    //   opacity: 70%;
+    //   font-size: 14px;
+    // }
   }
+}
+
+.transform_y {
+  transform: translateY(-30px);
+  opacity: 70%;
+  font-size: 14px;
 }
 
 select {
